--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,48 +5,67 @@ html {
   overflow-x: hidden; }
 
 header {
-  height: 120px;
+  position: relative;
+  height: 125px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #FF182F; }
   header .logo {
-    height: 65px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 9%;
+    height: 70px;
     width: 370px; }
   header .button-take {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 5%;
     width: 270px;
-    height: 75px;
+    height: 70px;
     background: linear-gradient(0deg, #000978 0%, #22339e 100%);
     color: white;
     font-size: 28px;
     text-transform: uppercase;
     border: none;
     border-radius: 15px;
-    font-weight: bold;
-    margin-left: 475px; }
+    font-weight: bold; }
 
 main {
   height: 730px;
   display: flex;
   background: url("../../src/img/bg-main.png");
   background-size: cover !important; }
-  main .loan .option-money {
+  main .loan {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 350px;
-    width: 600px;
-    margin: 55px auto 70px auto; }
+    flex-direction: column; }
+    main .loan__item {
+      margin-bottom: 60px; }
+    main .loan .option-money {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 350px;
+      width: 60%;
+      margin: 500px auto 30px auto;
+      padding-left: 80px; }
   main .condition-sliders__text {
+    margin-left: -20px;
     text-align: left;
-    transform: translateY(-25px);
+    transform: translateY(-15px);
     font-size: 28px;
     color: #22339E; }
   main .condition-sliders__value {
     text-align: right;
-    transform: translateY(-25px);
-    font-size: 28px;
-    font-weight: bold;
+    margin-left: 20px;
+    transform: translateY(-15px);
+    text-transform: uppercase;
+    font-size: 30px;
+    font-weight: bolder;
     color: #FF182F; }
   main .condition-sliders__button-minus {
     display: flex;
@@ -67,7 +86,7 @@ main {
     margin-top: 25px;
     margin-left: 30px;
     margin-right: 30px;
-    width: 370px;
+    width: 63%;
     height: 20px;
     padding: 0px;
     background: linear-gradient(90deg, #000978 1%, #FF182F 100%);
@@ -98,17 +117,18 @@ main {
       outline: none; }
   main .calculations {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     flex-direction: column; }
     main .calculations__text {
       font-size: 25px;
       color: #000978;
       margin: 0;
+      margin-left: 150px;
       padding: 0; }
     main .calculations__button-take-money {
-      width: 600px;
+      width: 570px;
       height: 70px;
-      margin: 40px auto 0px auto;
+      margin: 40px auto 0px 140px;
       border: none;
       border-radius: 15px;
       background: #FF182F;
@@ -130,6 +150,7 @@ main {
       align-items: center;
       text-align: center;
       margin-top: 0;
+      margin-left: 40px;
       min-width: 300px; }
       .advantages .features__item img {
         width: auto;
@@ -149,8 +170,9 @@ main {
     height: 40px;
     background: url("../../src/img/about/marks.png");
     background-size: cover;
-    top: 0%;
-    left: -2%; }
+    top: -10%;
+    left: -2%;
+    z-index: 100; }
   .about__marks-down {
     position: absolute;
     width: 70px;
@@ -158,51 +180,39 @@ main {
     background: url("../../src/img/about/marks.png");
     background-size: cover;
     transform: rotate(180deg);
-    top: 88%;
-    left: 73%; }
-  .about__arrow-prev {
-    position: absolute;
-    top: 65%;
-    left: -2%;
-    transform: translateY(-50%) rotate(180deg);
-    background: url("../../src/img/about/arrow.png") center center no-repeat;
-    background-size: cover;
-    width: 38px;
-    height: 70px; }
-  .about__arrow-next {
-    position: absolute;
-    top: 65%;
-    right: -2%;
-    transform: translateY(-50%);
-    background: url("../../src/img/about/arrow.png") center center no-repeat;
-    background-size: cover;
-    width: 37px;
-    height: 70px; }
+    top: 68%;
+    left: 73%;
+    z-index: 100; }
   .about__header {
     width: 100%;
     margin-top: 60px;
-    margin-bottom: 75px;
     font-size: 40px;
     text-align: center;
     text-transform: uppercase;
     color: #000978; }
     .about__header h2 {
+      margin-left: 40px;
       font-size: 40px;
       font-weight: bold; }
 
 .carousel {
   display: flex;
-  width: 100%;
+  width: 95%;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  margin: auto;
+  margin-left: 100px; }
   .carousel__item {
     position: relative;
-    display: flex;
+    display: flex !important;
     justify-content: center;
     width: 600px;
-    min-height: 400px !important;
+    min-height: 420px !important;
     margin-left: 10px;
-    padding-top: 40px; }
+    margin-top: 75px;
+    padding-top: 20px; }
+    .carousel__item div {
+      margin-top: -15px; }
     .carousel__item img {
       width: 120px;
       height: 120px;
@@ -211,25 +221,30 @@ main {
       margin-right: 50px;
       margin-top: 10px; }
     .carousel__item p {
-      font-size: 22px;
-      color: #FF182F; }
+      font-size: 26px;
+      color: #FF182F;
+      width: 80%; }
     .carousel__item span {
-      font-size: 22px;
+      display: inline-block;
+      width: 80%;
+      font-size: 19px;
       font-style: italic;
       color: #000978; }
 
 .company {
-  padding-bottom: 40px;
+  margin-top: -80px;
+  padding-bottom: 55px;
   background: url("../../src/img/company/bg.png");
   background-size: cover !important; }
   .company__features {
     width: 100%; }
   .company__header {
-    padding-top: 100px;
+    padding-top: 60px;
     margin-bottom: 40px;
+    margin-left: 50px;
     font-weight: bolder;
     color: #FF182F;
-    font-size: 34px;
+    font-size: 36px;
     text-align: center;
     text-transform: uppercase; }
   .company .wrap {
@@ -259,6 +274,8 @@ main {
         margin: 0 auto;
         margin-top: 15px;
         width: 750px; }
+        .company .wrap__item-long .card-company__text-lorem {
+          width: 120% !important; }
         .company .wrap__item-long::before {
           content: '';
           position: absolute;
@@ -332,23 +349,33 @@ main {
 
 @media (max-width: 1024px) and (min-width: 901px) {
   header {
-    height: auto; }
+    position: relative; }
     header .header .logo {
+      position: absolute;
+      top: 50%;
+      left: 8%;
+      transform: translateY(-50%);
       height: 50px;
-      width: auto;
-      margin-left: 10px;
-      margin-top: 50px;
-      margin-bottom: 25px; }
+      width: auto; }
     header .header .button-take {
+      position: absolute;
+      top: 50%;
+      right: 5%;
+      transform: translateY(-50%);
       min-width: 300px;
-      margin-top: -90px;
-      margin-left: 70%;
       font-size: 23px; }
-  .loan .option-money {
-    margin: 55px auto 15px auto !important; }
+  .loan {
+    margin-top: 220px; }
+    .loan .option-money {
+      width: 70%;
+      margin: auto !important;
+      padding-left: 0px !important; }
   .calculations {
-    text-align: center; }
+    margin: auto; }
+    .calculations__text {
+      margin-left: 40px !important; }
     .calculations__button-take-money {
+      margin: 40px auto !important;
       width: 80% !important; }
   .advantages .features {
     padding-top: 0;
@@ -357,7 +384,7 @@ main {
       margin: 30px auto;
       max-width: 60%; }
       .advantages .features__item img {
-        min-height: 150px; }
+        min-height: 200px; }
       .advantages .features__item span {
         font-size: 22px !important; }
   .carousel p {
@@ -370,6 +397,10 @@ main {
     min-width: 80px;
     min-height: 80px;
     margin-right: 10px; }
+  .carousel .prev {
+    left: -12%; }
+  .carousel .next {
+    right: 5%; }
   .company .card-company__text {
     font-size: 19px;
     margin-top: 50px;
@@ -398,16 +429,23 @@ main {
     line-height: 20px;
     margin: 0; } }
 
-@media (max-width: 900px) and (min-width: 425px) {
+@media (max-width: 900px) and (min-width: 427px) {
   header {
-    height: auto; }
+    position: relative; }
     header .header .logo {
-      width: auto;
-      display: block;
-      margin: 30px auto; }
+      position: absolute;
+      top: 50%;
+      left: 8%;
+      transform: translateY(-50%);
+      height: 50px;
+      width: auto; }
     header .header .button-take {
-      display: block;
-      margin: 30px auto; }
+      position: absolute;
+      top: 50%;
+      right: 5%;
+      transform: translateY(-50%);
+      min-width: 300px;
+      font-size: 23px; }
   main .condition-sliders .row {
     margin: auto; }
   main .condition-sliders__input {
@@ -428,19 +466,19 @@ main {
   main .condition-sliders__value {
     transform: translateY(-15px);
     font-size: 24px; }
-  main .loan__item {
-    margin-bottom: 50px; }
-    main .loan__item .row {
-      display: flex;
-      justify-content: center; }
-  main .loan .option-money {
-    width: auto;
-    height: auto;
-    margin: 40px auto;
-    padding: 0; }
-  main .calculations__button-take-money {
-    width: 100%;
-    font-size: 26px; }
+  main .loan {
+    margin-top: 220px; }
+    main .loan .option-money {
+      width: 70%;
+      margin: auto !important;
+      padding-left: 0px !important; }
+  main .calculations {
+    margin: auto; }
+    main .calculations__text {
+      margin-left: 40px !important; }
+    main .calculations__button-take-money {
+      margin: 40px auto !important;
+      width: 80% !important; }
   .advantages .features {
     padding: 0;
     flex-direction: column; }
@@ -453,8 +491,27 @@ main {
       font-size: 18px !important; }
   .about__header h2 {
     font-size: 34px; }
+  .about__slider {
+    margin: auto;
+    text-align: center; }
   .about .carousel__item {
-    padding: 70px 20px; }
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0px;
+    margin: 30px 0px; }
+    .about .carousel__item img {
+      margin: 10px 0; }
+    .about .carousel__item p {
+      width: 100%; }
+    .about .carousel__item div {
+      margin: 0; }
+  .about__marks-up {
+    left: 0%;
+    top: 0%; }
+  .about__marks-down {
+    top: 95%; }
   .company .wrap {
     display: flex;
     flex-direction: column; }
@@ -476,6 +533,8 @@ main {
           height: 5px;
           top: 25%;
           left: 30%; }
+        .company .wrap__item-long .card-company__text-lorem {
+          width: 100% !important; }
   .company .card-company__text {
     margin-left: 5px; }
     .company .card-company__text-check {
@@ -490,20 +549,32 @@ main {
       text-align: center;
       line-height: normal; }
     .footer img {
-      margin-bottom: 10px; } }
+      margin-bottom: 10px; }
+  .prev {
+    left: -4% !important; }
+  .next {
+    right: -4% !important; } }
 
-@media (max-width: 424px) {
+@media (max-width: 426px) {
   header {
-    height: auto; }
+    position: relative;
+    height: 200px; }
     header .header .logo {
-      width: 80%;
-      height: auto;
-      display: block;
-      margin: 30px auto 15px auto; }
+      position: absolute;
+      top: 14%;
+      left: 50%;
+      transform: translateX(-50%);
+      min-width: 300px;
+      height: 55px;
+      width: auto; }
     header .header .button-take {
-      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translateX(-50%);
+      min-width: 280px;
       height: 60px;
-      margin: 0px auto 25px; }
+      font-size: 30px; }
   main {
     height: auto; }
     main .condition-sliders .row {
@@ -516,6 +587,9 @@ main {
       height: 10px;
       margin: auto;
       padding: 0; }
+      main .condition-sliders__input::-webkit-slider-thumb {
+        width: 35px;
+        height: 35px; }
     main .condition-sliders__button-minus {
       width: 40px;
       height: 40px;
@@ -528,85 +602,115 @@ main {
       font-size: 52px;
       transform: scale(0.9); }
     main .condition-sliders__text {
+      padding: 0;
       transform: translateY(-15px);
-      font-size: 16px; }
+      font-size: 16px;
+      margin-left: 0px; }
     main .condition-sliders__value {
+      padding: 0;
+      margin: 0;
       transform: translateY(-15px);
-      font-size: 22px; }
-    main .loan__item {
-      margin-bottom: 30px;
-      padding: 0; }
-    main .loan .option-money {
-      width: auto;
-      height: auto;
-      margin: 60px auto 20px auto;
-      padding: 0px 20px; }
-    main .calculations__text {
-      font-size: 16px; }
-    main .calculations__button-take-money {
-      width: 100%;
-      margin-top: 15px;
-      height: 50px;
       font-size: 20px; }
+    main .loan {
+      width: 85%;
+      margin-top: 0px; }
+      main .loan__item {
+        margin-bottom: 30px;
+        padding: 0; }
+      main .loan .option-money {
+        width: auto;
+        height: auto;
+        margin: 50px auto 0px auto;
+        padding: 0px 20px; }
+    main .calculations {
+      margin: 40px auto; }
+      main .calculations__text {
+        font-size: 16px;
+        margin-left: 0px !important; }
+      main .calculations__button-take-money {
+        margin: 17px auto !important;
+        width: 100% !important;
+        height: 48px; }
   .advantages {
     padding-bottom: 0px; }
     .advantages .features {
-      padding: 0;
-      padding-top: 70px;
+      padding: 50px 0px 65px 0px;
       flex-direction: column; }
       .advantages .features__item {
         margin: 20px auto;
         max-width: 80%; }
       .advantages .features img {
-        height: 125px; }
+        height: 110px;
+        margin-bottom: 25px; }
       .advantages .features span {
-        font-size: 18px !important; }
-  .about__header h2 {
-    font-size: 36px; }
-  .about .carousel__item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 50px 20px 70px 20px;
-    text-align: center; }
-    .about .carousel__item img {
-      margin: auto;
-      margin-bottom: 20px; }
-    .about .carousel__item p {
-      font-size: 28px; }
-    .about .carousel__item span {
-      font-size: 20px; }
-  .company .header {
-    padding-top: 25px;
-    margin-bottom: 0px; }
-  .company .wrap {
-    display: flex;
-    flex-direction: column; }
-    .company .wrap__item {
+        font-size: 22px !important;
+        line-height: 27px; }
+  .about {
+    margin-bottom: 123px; }
+    .about__marks-up {
+      top: -5%;
+      left: 8%; }
+    .about__marks-down {
+      top: 90%;
+      left: 69%; }
+    .about__header {
+      margin-top: 50px !important; }
+      .about__header h2 {
+        width: 50%;
+        margin: auto;
+        font-size: 36px; }
+    .about__slider {
+      margin: auto; }
+    .about .carousel__item {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      margin-bottom: 20px;
-      text-align: center;
-      padding: 0px;
-      margin: 0px; }
-      .company .wrap__item .image {
-        height: 100px;
+      padding: 50px 20px 70px 20px;
+      text-align: center; }
+      .about .carousel__item div {
         margin-top: 0px; }
-      .company .wrap__item::before {
-        display: none; }
-      .company .wrap__item-long {
-        width: auto; }
-        .company .wrap__item-long::before {
+      .about .carousel__item img {
+        margin: auto;
+        margin-bottom: 20px; }
+      .about .carousel__item p {
+        margin: auto;
+        font-size: 28px; }
+      .about .carousel__item span {
+        font-size: 20px; }
+  .company {
+    margin-top: 0px; }
+    .company__header {
+      margin: auto;
+      padding: 46px 0px 38px 0px; }
+    .company .wrap {
+      display: flex;
+      flex-direction: column; }
+      .company .wrap__item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-bottom: 20px;
+        text-align: center;
+        padding: 0px;
+        margin: 0px; }
+        .company .wrap__item .image {
+          height: 100px;
+          margin-top: 0px; }
+        .company .wrap__item::before {
           display: none; }
-  .company .card-company__text {
-    font-size: 19px;
-    margin-left: 0px; }
-    .company .card-company__text-check {
-      top: -35%;
-      left: 45%; }
+        .company .wrap__item-long {
+          width: auto; }
+          .company .wrap__item-long::before {
+            display: none; }
+    .company .card-company__text {
+      width: 72%;
+      font-size: 20px;
+      margin-left: 0px; }
+      .company .card-company__text-check {
+        top: -35%;
+        left: 45%; }
   .footer {
     text-align: center; }
     .footer__item {
@@ -624,12 +728,14 @@ main {
     .footer .text__number {
       font-size: 28px; }
   .next {
-    top: 100% !important;
+    width: 20px !important;
+    top: 110% !important;
     right: 30% !important;
     width: auto !important;
     height: auto !important; }
   .prev {
-    top: 100% !important;
+    width: 20px !important;
+    top: 110% !important;
     left: 30% !important;
     width: auto !important;
     height: auto !important; } }
@@ -639,21 +745,21 @@ main {
   content: '';
   position: absolute;
   top: 45%;
-  left: -5%;
+  left: -6%;
   transform: translateY(-50%) rotate(180deg);
   background: url("../../src/img/about/arrow.png") center center no-repeat;
   background-size: cover;
-  width: 38px;
-  height: 70px;
+  width: 25px;
+  height: 50px;
   border: none; }
 
 .next {
   position: absolute;
   top: 45%;
-  right: -5%;
+  right: 1%;
   transform: translateY(-50%);
   background: url("../../src/img/about/arrow.png") center center no-repeat;
   background-size: cover;
-  width: 38px;
-  height: 70px;
+  width: 25px;
+  height: 50px;
   border: none; }
